[project]
name = "plz"
version = "0.1.0"
description = "The utils"
authors = [ { name = "Gaute Hope", email = "eg@gaute.vetsj.com" } ]
dependencies = [ ]

[project.urls]
repository = "http://github.com/gauteh/plz"

# [project.scripts]
# "sfydata" = "sfy.cli.sfydata:sfy"

[tool.pytest.ini_options]
addopts = "--benchmark-disable"

[tool.poetry]
name = "plz"
version = "0.1.0"
description = ""
authors = ["Gaute Hope <eg@gaute.vetsj.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
